Text-to-speech in spin, also fixed z-index issue with share button

--- a/src/components/spin.css
+++ b/src/components/spin.css
@@ -83,9 +83,8 @@
 }
 
 .share-image:hover, .like-image:hover {
-    width: 4vw;
-    height: 6vh;
     border: 2px solid lightskyblue;
+    cursor: pointer;
 }
 
 .more-tags-image {
@@ -100,9 +99,8 @@
 }
 
 .more-tags-image:hover {
-    width: 5vw;
-    height: 6vh;
-    border: 2px solid lightblue;
+    border: 2px solid lightskyblue;
+    cursor: pointer;
 }
 
 .tags-container p {
@@ -123,10 +121,11 @@ p.unfollowed-tags {
     color: var(--spin-second);
 }
 
-.num-likes{
-    margin-left: 5px;
+p.num-likes{
+    /*margin-left: 5px;
     margin-right: 40px;
-    margin-top: 5px;
+    margin-top: 5px;*/
+    flex: 50;
 }
 
 .more-tags-button {
@@ -141,15 +140,14 @@ p.unfollowed-tags {
     border-radius: 10px;
 }
 
-
-
-#action-buttons {
+.action-buttons {
     display: flex;
-    position : relative;
-    left: 70px;
+    flex: 40;
+    align-items: right;
+    margin-right: 1vw;
+    z-index: 0;
 }
 
 .editButtons {
     margin : 10px;
 }
-
